<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_18sdp">

    <ImageView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/appLogo"
        android:src="@drawable/university" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerUser"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textStyle="bold"
  />

                    <TextView
                        style="@style/registartionTextViews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtFullName" />

                    <EditText
                        android:id="@+id/nameEdtView"
                        style="@style/registartionEditViews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="no"
                        android:background="@drawable/edittextregistration"
                        android:hint="@string/edtFullName"
                        android:inputType="textCapWords" />

                    <TextView
                        style="@style/registartionTextViews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtCourse" />

                    <EditText
                        android:id="@+id/courseEdtView"
                        style="@style/registartionEditViews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="no"
                        android:background="@drawable/edittextregistration"
                        android:hint="@string/edtCourse"
                        android:inputType="textCapCharacters" />

                    <TextView
                        style="@style/registartionTextViews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language" />

                    <EditText
                        android:id="@+id/languageEdtText"
                        style="@style/registartionEditViews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="no"
                        android:background="@drawable/edittextregistration"
                        android:hint="@string/editLanguage"
                        android:inputType="textCapWords" />

                    <Button
                        android:id="@+id/submitForm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:background="@drawable/authenticationbtns"
                        android:text="@string/register"
                        android:textStyle="bold"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>
    </ScrollView>

</LinearLayout>
