<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F7FA"
    tools:context=".QuizCode">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <!-- Lottie Animation for Visual Appeal -->
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_180sdp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/otpanimation"
                android:layout_marginTop="@dimen/_20sdp"/>

            <!-- CardView for OTP Entry -->
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardElevation="@dimen/_8sdp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/innerItemHolder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_25sdp">

                    <!-- Title Text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/QuizCode"
                        android:textColor="#333333"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold"
                        android:layout_marginBottom="@dimen/_10sdp"/>

                    <!-- Subtitle Text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/codeSent"
                        android:textColor="#555555"
                        android:textSize="@dimen/_12sdp"/>

                    <!-- OTP Input Fields -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <EditText
                            android:id="@+id/otp1"
                            android:layout_width="@dimen/_45sdp"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_weight="1"
                            android:background="@drawable/roundcodeverify"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="1"
                            android:maxLines="1"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="@dimen/_10sdp"
                            tools:ignore="LabelFor" />

                        <EditText
                            android:id="@+id/otp2"
                            android:layout_width="@dimen/_45sdp"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_weight="1"
                            android:background="@drawable/roundcodeverify"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="1"
                            android:maxLines="1"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="@dimen/_10sdp"
                            tools:ignore="LabelFor" />

                        <EditText
                            android:id="@+id/otp3"
                            android:layout_width="@dimen/_45sdp"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_weight="1"
                            android:background="@drawable/roundcodeverify"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="1"
                            android:maxLines="1"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="@dimen/_10sdp"
                            tools:ignore="LabelFor" />

                        <EditText
                            android:id="@+id/otp4"
                            android:layout_width="@dimen/_45sdp"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_weight="1"
                            android:background="@drawable/roundcodeverify"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:maxLength="1"
                            android:maxLines="1"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:ignore="LabelFor" />

                    </LinearLayout>

                    <!-- Verify Button -->
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/verifyCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:padding="@dimen/_15sdp"
                        android:text="@string/verify"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:textStyle="bold"
                        android:elevation="@dimen/_4sdp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
